Header on large devices

--- a/index.html
+++ b/index.html
@@ -13,14 +13,60 @@
 
         <!-- TODO: <link rel="shortcut icon" href="img/icon.jpg" /> -->
 
-        <link href="https://fonts.googleapis.com/css?family=Marcellus" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Marcellus" rel="stylesheet" />
         <link rel="stylesheet" href="css/bootstrap.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
     <body>
+        <div class="d-none d-lg-block color-primary">
+            <nav class="navbar navbar-header pt-2">
+                <div class="header-item link">
+                    <span class="fa fa-phone"></span>
+                    &nbsp;011/0000000
+                </div>
+                <div class="header-item ml-auto">
+                    <a href="content.register.html" class="link">
+                        <span class="fa fa-sign-in" aria-hidden="true"></span>
+                        &nbsp;Sign in or Register
+                    </a>
+                </div>
+                <div class="header-item link">
+                    <span class="fa fa-map-marker" aria-hidden="true"></span>
+                    &nbsp;Store Locator
+                </div>
+                <div class="header-item link">
+                    <span class="fa fa-shopping-bag" aria-hidden="true"></span>
+                    &nbsp;0 Items
+                </div>
+            </nav>
+
+            <nav class="navbar navbar-header">
+                <div class="navbar-brand mx-auto py-0">
+                    <a href="#" class="logo text-uppercase">
+                        WatchShop
+                        <div class="my-row">
+                            <div class="bar"></div>
+                            <div class="small-text text-uppercase">Since 1821</div>
+                            <div class="bar"></div>
+                        </div>
+                    </a>
+                </div>
+            </nav>
+
+            <nav class="navbar navbar-header pb-3">
+                <form class="form-inline ml-auto">
+                    <div class="search">
+                        <input class="form-control search-box" type="search" placeholder="Search" aria-label="Search" />
+                        <span class="fa fa-search"></span>
+                    </div>
+                </form>
+            </nav>
+        </div>
+
         
+
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
