--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- TODO: <link rel="shortcut icon" href="img/icon.jpg" /> -->
 
-        <link href="https://fonts.googleapis.com/css?family=Marcellus" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
         <link rel="stylesheet" href="css/bootstrap.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -42,7 +42,7 @@
                 </div>
             </nav>
 
-            <nav class="navbar navbar-header">
+            <nav class="navbar navbar-header nav-logo">
                 <div class="navbar-brand mx-auto py-0">
                     <a href="#" class="logo text-uppercase">
                         WatchShop
@@ -56,6 +56,7 @@
             </nav>
 
             <nav class="navbar navbar-header pb-3">
+                <span class="link">Choose language</span>
                 <form class="form-inline ml-auto">
                     <div class="search">
                         <input class="form-control search-box" type="search" placeholder="Search" aria-label="Search" />
@@ -65,8 +66,56 @@
             </nav>
         </div>
 
+        <div id="main-navigation" class="color-primary">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="navbar-brand d-block d-lg-none">
+                        <a href="#" class="logo text-uppercase">
+                            WatchShop
+                            <div class="my-row">
+                                <div class="bar"></div>
+                                <div class="small-text text-uppercase">Since 1821</div>
+                                <div class="bar"></div>
+                            </div>
+                        </a>
+                    </div>
+                    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="fa fa-bars px-1 pt-1"></span>
+                        <span class="small-text pb-1">Menu</span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="main-navbar">
+                        <ul class="navbar-nav nav-fill w-100">
+                            <li class="nav-item active">
+                                <a class="nav-link link text-uppercase" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link text-uppercase" href="#">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <!-- Span zato sto linkovi koji ne vode nigde nisu dobri za SEO -->
+                                <span class="nav-link link text-uppercase">Brands</span>
+                            </li>
+                            <li class="nav-item">
+                                <span class="nav-link link text-uppercase">Mens watches</span>
+                            </li>
+                            <li class="nav-item">
+                                <span class="nav-link link text-uppercase">Ladies watches</span>
+                            </li>
+                            <li class="nav-item">
+                                <span class="nav-link link text-uppercase">Sell your watch</span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link text-uppercase" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link text-uppercase" href="#">About me</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
         
-
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
