Shopping-cart fix

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </a>
                     </div>
 
-                    <div class="link">
+                    <div class="link d-block d-lg-none">
                         <span class="fa fa-shopping-cart" aria-hidden="true"></span>
                     </div>
 
