--- a/index.html
+++ b/index.html
@@ -209,6 +209,49 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row py-2">
+                    <div class="col-lg-3 col-md-6 col-xs-12 py-2">
+                        <div class="row">
+                            <div class="col-6 manf-logo">
+                                <img src="img/rolex.jpg" alt="Rolex" class="img-thumbnail" />
+                            </div>
+                            <div class="col-6 manf-logo">
+                                <img src="img/boss.jpg" alt="Hugo Boss" class="img-thumbnail" />
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-xs-12 py-2">
+                        <div class="row">
+                            <div class="col-6 manf-logo">
+                                <img src="img/breitling.jpg" alt="Breitling" class="img-thumbnail" />
+                            </div>
+                            <div class="col-6 manf-logo">
+                                <img src="img/olivia.jpg" alt="Olivia Burton" class="img-thumbnail" />
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-xs-12 py-2">
+                        <div class="row">
+                            <div class="col-6 manf-logo">
+                                <img src="img/kros.jpg" alt="Kros" class="img-thumbnail" />
+                            </div>
+                            <div class="col-6 manf-logo">
+                                <img src="img/heuer.jpg" alt="Tag heuer" class="img-thumbnail" />
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-xs-12 py-2">
+                        <div class="row">
+                            <div class="col-6 manf-logo">
+                                <img src="img/longines.jpg" alt="Longines" class="img-thumbnail" />
+                            </div>
+                            <div class="col-6 manf-logo">
+                                <img src="img/omega.jpg" alt="Omega" class="img-thumbnail" />
+                            </div> 
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </div>
