--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>Title</title>
+        <title>WatchShop | Find best watch that suits you</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="author" content="Nikola Jovic" />
@@ -11,7 +11,7 @@
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 
-        <!-- TODO: <link rel="shortcut icon" href="img/icon.jpg" /> -->
+        <link rel="shortcut icon" href="img/icon.png" />
 
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet" />
