Shortcut icon changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <div class="d-none d-lg-block color-primary">
-                <nav class="navbar navbar-header pt-2">
+                <nav class="navbar navbar-header pt-3 px-4">
                     <div class="header-item link">
                         <span class="fa fa-phone"></span>
                         &nbsp;011/0000000
