--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </header>
 
         <div id="main">
-            <div class="d-none d-lg-block p-4">
+            <div class="p-4">
                 <div class="container">
                     <h1 class="text-uppercase m-0">Watches</h1>
                 </div>
