--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="col-lg-3 col-md-6 col-xs-12 p-2">
                         <div class="category p-2">
                             <img src="img/ladies-watch.jpg" class="img-fluid mx-auto d-block" alt="Ladies Watch" />
-                            <span class="text-uppercase text-dark d-block text-center py-1">ladies Watches</span>
+                            <span class="text-uppercase text-dark d-block text-center py-1">Ladies Watches</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-xs-12 p-2">
