Added special offers

--- a/index.html
+++ b/index.html
@@ -254,6 +254,72 @@
                 </div>
             </div>
             
+            <header class="container">
+                <h2 class="mx-auto pt-5 text-center text-antialiased serif-font special-offers-header text-dark text-uppercase">Speical offers</h2>
+                <div class="my-row-2 mx-auto">
+                    <span class="bar-2"></span>
+                    <span class="special-offers-text text-center text-muted font-italic d-block mx-auto py-1">Don&apos;t miss best offers of the year</span>
+                    <span class="bar-2"></span>
+                </div>
+            </header>
+
+            <div id="special-offers" class="container">
+                <div class="row pt-4 px-4">
+                    <div class="col-xs-12 col-lg-6 mb-4">
+                        <div class="special-offer mx-auto">
+                            <img src="img/offer1.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <div class="caption">
+                                <div class="caption-text text-center text-uppercase py-3">
+                                    Only 4 days left
+                                </div>
+                                <div class="caption-button text-uppercase text-center py-3">
+                                    Shop Now
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-6 mb-4">
+                        <div class="special-offer mx-auto">
+                            <img src="img/offer2.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <div class="caption">
+                                <div class="caption-text text-center text-uppercase py-3">
+                                    Only 4 days left
+                                </div>
+                                <div class="caption-button text-uppercase text-center py-3">
+                                    Shop Now
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-6 mb-4">
+                        <div class="special-offer mx-auto">
+                            <img src="img/offer3.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <div class="caption">
+                                <div class="caption-text text-center text-uppercase py-3">
+                                    Only 4 days left
+                                </div>
+                                <div class="caption-button text-uppercase text-center py-3">
+                                    Shop Now
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-6 mb-4">
+                        <div class="special-offer mx-auto">
+                            <img src="img/offer4.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <div class="caption">
+                                <div class="caption-text text-center text-uppercase py-3">
+                                    Only 4 days left
+                                </div>
+                                <div class="caption-button text-uppercase text-center py-3">
+                                    Shop Now
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
 
         <script src="js/jquery.min.js"></script>
