--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         &nbsp;011/0000000
                     </div>
                     <div class="header-item ml-auto">
-                        <a href="content.register.html" class="link">
+                        <a href="content/register.html" class="link">
                             <span class="fa fa-sign-in" aria-hidden="true"></span>
                             &nbsp;Sign in or Register
                         </a>
@@ -119,6 +119,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link link text-uppercase" href="#">About me</a>
+                                </li>
+                                <li class="nav-item d-xs-block d-lg-none">
+                                    <a class="nav-link link text-uppercase" href="content/register.html">Sign in or Register</a>
                                 </li>
                             </ul>
                         </div>
@@ -319,7 +322,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
         <script src="js/jquery.min.js"></script>
