--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
             </header>
 
-            <div id="special-offers" class="container">
+            <div class="container">
                 <div class="row pt-4 px-4">
                     <div class="col-xs-12 col-lg-6 mb-4">
                         <div class="special-offer mx-auto">
@@ -283,10 +283,10 @@
                     </div>
                     <div class="col-xs-12 col-lg-6 mb-4">
                         <div class="special-offer mx-auto">
-                            <img src="img/offer2.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <img src="img/offer2.jpg" alt="Special Offer 2" class="img-fluid" />
                             <div class="caption">
                                 <div class="caption-text text-center text-uppercase py-3">
-                                    Only 4 days left
+                                    30% off if you pre-order now
                                 </div>
                                 <div class="caption-button text-uppercase text-center py-3">
                                     Shop Now
@@ -296,10 +296,10 @@
                     </div>
                     <div class="col-xs-12 col-lg-6 mb-4">
                         <div class="special-offer mx-auto">
-                            <img src="img/offer3.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <img src="img/offer3.jpg" alt="Special Offer 3" class="img-fluid" />
                             <div class="caption">
                                 <div class="caption-text text-center text-uppercase py-3">
-                                    Only 4 days left
+                                    only 10 left in stock
                                 </div>
                                 <div class="caption-button text-uppercase text-center py-3">
                                     Shop Now
@@ -309,10 +309,10 @@
                     </div>
                     <div class="col-xs-12 col-lg-6 mb-4">
                         <div class="special-offer mx-auto">
-                            <img src="img/offer4.jpg" alt="Special Offer 1" class="img-fluid" />
+                            <img src="img/offer4.jpg" alt="Special Offer 4" class="img-fluid" />
                             <div class="caption">
                                 <div class="caption-text text-center text-uppercase py-3">
-                                    Only 4 days left
+                                    60% discount
                                 </div>
                                 <div class="caption-button text-uppercase text-center py-3">
                                     Shop Now
@@ -323,9 +323,77 @@
                 </div>
             </div>
 
+            <header class="container">
+                <h2 class="mx-auto pt-3 text-center text-antialiased serif-font info-header text-dark text-uppercase">Watch Information</h2>
+                <div class="long-bar mx-auto my-4"></div>
+            </header>
+
+            <div class="container">
+                <div class="row py-3">
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="information">
+                            <div class="img-xs-holder mx-auto">
+                                <img src="img/repair.jpg" alt="Servicing" class="img-fluid w-100" />
+                            </div>
+                            <div class="serif-font text-dark text-uppercase text-center py-2">
+                                Watch Servicing
+                            </div>
+
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                                Find out more
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="information">
+                            <div class="img-xs-holder mx-auto">
+                                <img src="img/choose.jpg" alt="Guide" class="img-fluid w-100" />
+                            </div>
+                            <div class="serif-font text-dark text-uppercase text-center py-2">
+                                WATCH BUYING GUIDE
+                            </div>
+
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                                Find out more
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="information">
+                            <div class="img-xs-holder mx-auto">
+                                <img src="img/new.jpg" alt="News" class="img-fluid w-100" />
+                            </div>
+                            <div class="serif-font text-dark text-uppercase text-center py-2">
+                                LATEST WATCH NEWS
+                            </div>
+
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                                Read more
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <div class="information">
+                            <div class="img-xs-holder mx-auto">
+                                <img src="img/loc.jpg" alt="Location" class="img-fluid w-100" />
+                            </div>
+                            <div class="serif-font text-dark text-uppercase text-center py-2">
+                                STORE LOCATOR
+                            </div>
+
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                                Find stores
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--<div class="btn btn-primary scrollToTop" onclick="topFunction()">AAA</div>-->
         </div>
 
         <script src="js/jquery.min.js"></script>
+        <script src="js/scrolltotop.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
