--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
             <footer>
                 <div class="color-info">
-                    <div class="w-100 back-to-top mx-auto text-center text-uppercase text-dark p-3 scrollToTop" onclick="topFunction()">
+                    <div class="w-100 back-to-top mx-auto text-center text-uppercase text-dark p-3 scrollToTop">
                         <span class="fa fa-caret-up" aria-hidden="true"></span>
                         &nbsp;Back to top&nbsp;
                         <span class="fa fa-caret-up" aria-hidden="true"></span>
