Changed name from 'scrolltotop.js' to 'myscripts.js'

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </div>
 
         <script src="js/jquery.min.js"></script>
-        <script src="js/scrolltotop.js"></script>
+        <script src="js/myscripts.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
