Fix for shopping cart

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </a>
                         </div>
     
-                        <div class="link d-block d-lg-none">
+                        <div class="link d-block d-lg-none shopping-cart">
                             <span class="fa fa-shopping-cart" aria-hidden="true"></span>
                         </div>
     
