--- a/index.html
+++ b/index.html
@@ -397,6 +397,52 @@
                         <span class="fa fa-caret-up" aria-hidden="true"></span>
                     </div>
                 </div>
+
+                <div class="container-fluid">
+                    <div class="mx-auto text-center text-dark text-uppercase small-text">
+                        SIGN UP FOR THE LATEST NEWS &amp; OFFERS
+                    </div>
+
+                    <form class="pb-4 mx-auto text-center" action="newsletter.php" method="post">
+                        <input class="newsletter-input newsletter-email mr-1" type="email" placeholder="Please enter your email address" />
+                        <input class="newsletter-input newsletter-submit" type="submit" value="SIGN UP" />
+                    </form>
+                </div>
+
+                <div id="footer-menu" class="container py-2 d-none d-lg-block">
+                    <ul class="nav mx-auto">
+                        <li class="nav-item ml-auto">
+                            <a href="#" class="nav-link text-uppercase">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link text-uppercase">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-uppercase">Brands</span>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-uppercase">Mens watches</span>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-uppercase">Ladies watches</span>
+                        </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-uppercase">Sell your watch</span>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link text-uppercase">Contact</a>
+                        </li>
+                        <li class="nav-item mr-auto">
+                            <a href="#" class="nav-link text-uppercase">About Me</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Social media -->
+
+                <div id="copyrights" class="container-fluid py-2 text-center text-dark">
+                    <span>Copyrights&copy; 2017 Nikola Jovi&#263;</span>
+                </div>
             </footer>
         </div>
 
