--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div>
             </div>
 
-            <footer>
+            <footer id="footer">
                 <div class="color-info">
                     <div class="w-100 back-to-top mx-auto text-center text-uppercase text-dark p-3 scrollToTop">
                         <span class="fa fa-caret-up" aria-hidden="true"></span>
