--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="author" content="Nikola Jovic" />
-        <!-- TODO: Change meta tags -->
-		<meta name="keywords" content="" />
-		<meta name="description" content="" />
+		<meta name="keywords" content="watch, watchshop, watches" />
+		<meta name="description" content="Welcome to WatchShop, here you can find best watches for lowest prices." />
 
         <link rel="shortcut icon" href="img/icon.png" />
 
@@ -99,7 +98,7 @@
                                     <a class="nav-link link text-uppercase" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link link text-uppercase" href="#">Gallery</a>
+                                    <a class="nav-link link text-uppercase" href="content/gallery.html">Gallery</a>
                                 </li>
                                 <li class="nav-item">
                                     <!-- Span zato sto linkovi koji ne vode nigde nisu dobri za SEO -->
@@ -115,10 +114,10 @@
                                     <span class="nav-link link text-uppercase">Sell your watch</span>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link link text-uppercase" href="#">Contact</a>
+                                    <a class="nav-link link text-uppercase" href="content/contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link link text-uppercase" href="#">About me</a>
+                                    <a class="nav-link link text-uppercase" href="content/aboutme.html">About me</a>
                                 </li>
                                 <li class="nav-item d-xs-block d-lg-none">
                                     <a class="nav-link link text-uppercase" href="content/register.html">Sign in or Register</a>
@@ -415,7 +414,7 @@
                             <a href="#" class="nav-link text-uppercase">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-uppercase">Gallery</a>
+                            <a href="content/gallery.html" class="nav-link text-uppercase">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link text-uppercase">Brands</span>
@@ -430,15 +429,13 @@
                             <span class="nav-link text-uppercase">Sell your watch</span>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link text-uppercase">Contact</a>
+                            <a href="content/contact.html" class="nav-link text-uppercase">Contact</a>
                         </li>
                         <li class="nav-item mr-auto">
-                            <a href="#" class="nav-link text-uppercase">About Me</a>
+                            <a href="content/aboutme.html" class="nav-link text-uppercase">About Me</a>
                         </li>
                     </ul>
                 </div>
-
-                <!-- Social media -->
 
                 <div id="copyrights" class="container-fluid py-2 text-center text-dark">
                     <span>Copyrights&copy; 2017 Nikola Jovi&#263;</span>
