--- a/index.html
+++ b/index.html
@@ -431,14 +431,17 @@
                         <li class="nav-item">
                             <a href="content/contact.html" class="nav-link text-uppercase">Contact</a>
                         </li>
-                        <li class="nav-item mr-auto">
+                        <li class="nav-item">
                             <a href="content/aboutme.html" class="nav-link text-uppercase">About Me</a>
+                        </li>
+                        <li class="nav-item mr-auto">
+                            <a href="content/sitemap.xml" class="nav-link text-uppercase">Sitemap</a>
                         </li>
                     </ul>
                 </div>
 
                 <div id="copyrights" class="container-fluid py-2 text-center text-dark">
-                    <span>Copyrights&copy; 2017 Nikola Jovi&#263;</span>
+                    <span>Copyrights&copy; 2018 Nikola Jovi&#263;</span>
                 </div>
             </footer>
         </div>
