--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         <a href="content/aboutme.html" class="nav-link text-uppercase">About Me</a>
                     </li>
                     <li class="nav-item mr-auto">
-                        <a href="content/sitemap.xml" class="nav-link text-uppercase">Sitemap</a>
+                        <a href="sitemap.xml" class="nav-link text-uppercase">Sitemap</a>
                     </li>
                 </ul>
             </div>
