Contact and register pages added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div id="main">
             <div class="p-4">
                 <div class="container">
-                    <h1 class="text-uppercase m-0">Watches</h1>
+                    <h1 class="text-uppercase m-0 serif-font">Watches</h1>
                 </div>
             </div>
 
@@ -328,7 +328,7 @@
             </header>
 
             <div class="container">
-                <div class="row py-3">
+                <div class="row">
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <div class="information">
                             <div class="img-xs-holder mx-auto">
@@ -338,7 +338,7 @@
                                 Watch Servicing
                             </div>
 
-                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto mt-1 mb-4">
                                 Find out more
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                 WATCH BUYING GUIDE
                             </div>
 
-                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto mt-1 mb-4">
                                 Find out more
                             </div>
                         </div>
@@ -366,7 +366,7 @@
                                 LATEST WATCH NEWS
                             </div>
 
-                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto mt-1 mb-4">
                                 Read more
                             </div>
                         </div>
@@ -380,7 +380,7 @@
                                 STORE LOCATOR
                             </div>
 
-                            <div class="info-btn text-uppercase text-dark text-center mx-auto my-2">
+                            <div class="info-btn text-uppercase text-dark text-center mx-auto mt-1 mb-4">
                                 Find stores
                             </div>
                         </div>
