--- a/content/contact.html
+++ b/content/contact.html
@@ -7,8 +7,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="author" content="Nikola Jovic" />
-        <meta name="keywords" content="watch, watchshop, watches, author, about" />
-        <meta name="description" content="This page is about author." />
+        <meta name="keywords" content="watch, watchshop, watches, contact, email, message" />
+        <meta name="description" content="You can contact me here." />
 
         <link rel="shortcut icon" href="../img/icon.png" />
 
