--- a/content/register.html
+++ b/content/register.html
@@ -7,8 +7,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="author" content="Nikola Jovic" />
-        <meta name="keywords" content="watch, watchshop, watches, author, about" />
-        <meta name="description" content="This page is about author." />
+        <meta name="keywords" content="watch, watchshop, watches, login, signin, register, signup" />
+        <meta name="description" content="This is registration page." />
 
         <link rel="shortcut icon" href="../img/icon.png" />
 
